--- a/client/src/components/MyTrips/MyTripsRequests/style.css
+++ b/client/src/components/MyTrips/MyTripsRequests/style.css
@@ -3,13 +3,8 @@
   flex-direction: column;
   padding-top: 1rem;
   margin: 0rem auto;
-  height: 100%;
   width: 70%;
   background-color: rgba(255, 255, 255, 0.95);
-}
-
-.my-trips-requests__wrapper p:first-child {
-  padding-top: 10rem;
 }
 
 @media screen and (min-width: 30rem) {
@@ -37,6 +32,5 @@
   }
   .my-trips-requests__wrapper {
     width: 70%;
-    padding: 4rem;
   }
 }
