--- a/client/src/components/MyTrips/MyTripsRequestsCard/style.css
+++ b/client/src/components/MyTrips/MyTripsRequestsCard/style.css
@@ -1,5 +1,5 @@
 .request-card {
-  margin: 2rem auto;
+  margin: 0.5rem auto;
   border: 2px solid var(--light-yellow);
   border-radius: 0.4rem;
   background-color: white;
